# ExchCXX

./: .gitignore  CMakeLists.txt
cmake/: patch_libxc_work_mgga.cmake
include/exchcxx/: xc_functional.hpp
include/exchcxx/enums/: functionals.hpp
include/exchcxx/exceptions/: exchcxx_exception.hpp
include/exchcxx/factory/: xc_kernel.hpp
include/exchcxx/impl/builtin/kernels/: deorbitalized.hpp  screening_interface.hpp
src/: CMakeLists.txt  builtin_interface.cxx  libxc.cxx  xc_functional.cxx
test/: CMakeLists.txt  reference_values.cxx  xc_functional_test.cxx  xc_kernel_test.cxx
